Retour au bon html statique...

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 <body>  
   <div>
 
-    <?php include 'head.html'; ?>
+    <h1>Premier Langage</h1>
+    
+    <b><i>Par des profs, pour des profs</b></i>
+
+    Accueil | Code Source | Découverte de PL | Documentation | Librairie
     
     <p>
       Premier Langage est une plateforme d'exercices multi-matières
