Page d'accueil à peu près final

--- a/index.html
+++ b/index.html
@@ -51,41 +51,78 @@
     <br />
     <a href="index.html" class="menu_a">Accueil</a>  |
     <a href="code_source.html" class="menu_a">Code Source</a> |
-    <a href="code_source.html" class="menu_a">Découverte de PL</a> |
-    <a href="code_source.html" class="menu_a">Documentation</a> |
-    <a href="code_source.html" class="menu_a">Librairie scientifique</a>
+    <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |
+    <a href="documentation.html" class="menu_a">Documentation</a> |
+    <a href="librairie.html" class="menu_a">Librairie scientifique</a>
   </div>
   <div class="main_body">
     
     <p>
       <b>Premier Langage</b> est une plateforme d'exercices
-      multi-matières avec auto-correction. Elle se veut simple
-      d'utilisation à la fois pour les élèves et les enseignants. Pour
-      les enseignants, Premier Langage fournit des outils automatiques
-      pour concevoir facilement et rapidement des exercices de
+      multi-matières avec auto-correction.
+    </p>
+    <p>
+      <b>Premier Langage</b> se veut simple d'utilisation à la fois
+      pour les élèves et les enseignants. Pour les enseignants,
+      Premier Langage fournit des outils automatiques
+      pour <b>concevoir facilement et rapidement des exercices</b> de
       technologie classique (QCM, cliquer-glisser, texte à cliquer,
-      notions à reliée deux à deux, ...). Pour les concepteurs experts
-      de ressources pédagogiques, Premier langage offre toute la
-      puissance du langage Python dans un environnement d'exécution
-      sécurisé. Ainsi, il est possible d'appeler des compilateurs et
-      de lancer des exécutions de programme proposé par des élèves,
-      certains exercices charge des bibliothèques Python évolué de
-      calcul comme NumPy et SciPy, ou encore il est possible de
-      charger des applications javascript pour afficher ou faire
-      construire aux élèves des molécules.
+      notions à reliée deux à deux).
+    </p>
+    <p>
+      Pour les concepteurs experts de ressources pédagogiques, Premier
+      langage offre toute la puissance du langage <b>Python</b> dans
+      un
+      <b>environnement d'exécution sécurisé</b>. Ainsi, il est
+      possible d'appeler des compilateurs et de lancer des exécutions
+      de programme proposé par des élèves, certains exercices charge
+      des bibliothèques Python évolué de calcul comme NumPy et SciPy,
+      ou encore il est possible de charger des
+      applications <b>JavaScript</b> pour afficher ou faire construire
+      aux élèves des molécules.
     </p>
 
 
     <p>
-      Premier Langage est un projet universitaire et communautaire
-      open source initialement lancé à l'Université Paris Est à
-      Marne-la-Vallée
+      <b>Premier Langage</b> est un <b>projet universitaire et
+      communautaire</b> open source initialement lancé à l'Université
+      Paris Est à Marne-la-Vallée
       par <a href="http://igm.univ-mlv.fr/~dr/">Dominique Revuz</a>
       et <a href="http://igm.u-pem.fr/">l'I.G.M. (Institut Gaspard
       Monge)</a>.
     </p>
 
-  
+    <p>
+      <b>Premier Langage</b> est actuellement déployé sur des promotions
+      de <b>plus de 300 élèves</b> sur les deux sites suivants.
+    </p>
+    
+    <br />
+    <center>
+      <img src="UPEM_LOGO.png"/> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      <img src="logo-psud.jpg"/>
+    </center>
+    <br />
+
+    <p>
+      <b>Premier Langage</b> n'invente rien. C'est juste une
+      ré-implémentation du moteur de jeu des exercices avec des
+      technologies modernes, efficaces, sécurisées et pouvant tenir la
+      charge. <b>Premier Langage</b> s'inspire des projets précédant
+      en prenant pour héritage toutes les ressources pédagogiques déjà
+      existantes (notamment WIMS pour en citer une). <b>Premier
+      langage</b> tire principalement parti des technologies
+      suivantes.
+    </p>
+
+    <br />
+    <center>
+      <img src="python.png" width="16%"/>
+      <img src="javascript_logo.png" width="16%"/>
+      <img src="django.png" width="16%"/>
+      <img src="docker.png" width="16%"/>
+      <img src="lti.png" width="16%"/>
+    </center>
   </div>
 </body>
 </html>
