--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
    padding: 1%;
    }
  </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149458831-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149458831-1');
+</script>
  
 </head>
 
