site web statique en place

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <meta property="og:url" content="https://premierlangage.github.io/PLPR/"/>
  <meta property="og:image" content="https://pl.u-pem.fr/static/favicon.ico"/>
  <meta property="og:site_name" content="Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs"/>
- <meta property="og:description" content="Premier Langage is a platform of exercises for multiple subjects (Mathematics, computer sciences, ...) with auto-correction. It is easy to use for both students and teachers."/>
+ <meta property="og:description" content="Premier Langage est une plateforme d'exercices en ligne multi-matières auto corrigés."/>
 
  <style type="text/css">
    .menu{
@@ -66,6 +66,8 @@
     <a href="librairie.html" class="menu_a">Librairie scientifique</a>
   </div>
   <div class="main_body">
+
+    <h1>Bienvenu sur la plateforme Premier Langage</h1>
     
     <p>
       <b>Premier Langage</b> est une plateforme d'exercices
