--- a/code_source.html
+++ b/code_source.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
 <head>
- <title>Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs
+ <title>Code source de Premier Langage
  </title>
 
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -10,12 +10,12 @@
 
  <link rel="shortcut icon" href="https://pl.u-pem.fr/static/favicon.ico" type="image/x-icon" />
 
- <meta property="og:title" content="Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs"/>
+ <meta property="og:title" content="Code source de Premier Langage"/>
  <meta property="og:type" content="website"/>
  <meta property="og:url" content="https://premierlangage.github.io/PLPR/"/>
  <meta property="og:image" content="https://pl.u-pem.fr/static/favicon.ico"/>
  <meta property="og:site_name" content="Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs"/>
- <meta property="og:description" content="Premier Langage is a platform of exercises for multiple subjects (Mathematics, computer sciences, ...) with auto-correction. It is easy to use for both students and teachers."/>
+  <meta property="og:description" content="Premier Langage est une plateforme d'exercices en ligne multi-matières auto corrigés."/>
 
  <style type="text/css">
    .menu{
@@ -67,6 +67,8 @@
   </div>
   <div class="main_body">
 
+    <h1>Code source de Premier Langage</h1>
+    
     <p>
       <b>Premier Langage</b> est un <b>Projet universitaire et
       communautaire</b> open-source. Pour permettre à tout enseignant,
