remove ../ in the image src

--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -72,7 +72,7 @@
     <h1>TODO for D.R.</h1>
 
     <h2>des screenshots ! des screenshots ! des screenshots !</h2>
-    <img src="../SCREENSHOTS/1-cinetique_pl.png">
+    <img src="SCREENSHOTS/1-cinetique_pl.png">
   </div>
 </body>
 </html>
