--- a/documentation.html
+++ b/documentation.html
@@ -74,7 +74,8 @@
       se veut ouverte au partage, idéalement <b>Premier Langage</b>
       est documenté à tous les niveaux. Suivant le rôle que vous
       souhaitez jouer, vous devrez trouver une documentation adapté à
-      vos intentions.
+      vos intentions. <a href="https://documentationpl.readthedocs.io/fr/latest/contribuer/" target="blank">
+      Voici ici quelques conseils pour contribuer.</a>
     </p>
 
     
