Quelle erreur de menu du joueur francais....

--- a/documentation.html
+++ b/documentation.html
@@ -62,7 +62,7 @@
     <a href="index.html" class="menu_a">Accueil</a>  |
     <a href="code_source.html" class="menu_a">Code Source</a> |
     <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |
-    <a href="communaute.html" class="menu_a">Découverte de PL</a>| 
+    <a href="communaute.html" class="menu_a">Communauté</a>| 
     <a href="documentation.html" class="menu_a">Documentation</a> |
     <a href="librairie.html" class="menu_a">Librairie scientifique</a>
   </div>
