--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -73,6 +73,7 @@
 
 
       <img src="SCREENSHOTS/1-cinetique_pl.png">
+     <h1>Découverte rapide de Premier Langage</h1>
     
    <img src="SCREENSHOTS/1-cinetique_pl.png">
 
