--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -69,14 +69,24 @@
   <div class="main_body">
 
     <h1>Découverte rapide de Premier Langage</h1>
-    
+   <h2> Un exemple de page d'exercices </h2>
+   
+   En vous connectant sur <a href="http://elearning.u-pem.fr" > le moodle de l'université de marne la vallée.</a>
+   
+   Avec le compte externe  EssoxLucius1 mot de passe EssoxLucius1.
+   Vous accèderez 
 
+   <h2> Exemple de chimie </h2>
 
       <img src="SCREENSHOTS/1-cinetique_pl.png">
-     <h1>Découverte rapide de Premier Langage</h1>
+     <h2>Un exemple de Maths</h1>
     
-   <img src="SCREENSHOTS/1-cinetique_pl.png">
-
+   <img src="SCREENSHOTS/2-rang_matrice.png">
+ <p> Remarquez dans cet exemple que la matrice est tirée au hasard 
+     <h2>Un exemple informatique : C </h1>
+   <img src="SCREENSHOTS/3-langageC-ackermann.png">
+     <h2>Un exemple informatique : Java </h1>
+   <img src="SCREENSHOTS/4-java-getters.png">
   </div>
  
 </body>
