--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -74,8 +74,16 @@
    En vous connectant sur <a href="http://elearning.u-pem.fr" > le moodle de l'université de marne la vallée.</a>
    
    Avec le compte externe  EssoxLucius1 mot de passe EssoxLucius1.
-   Vous accèderez 
+   Vous accèderez au cours moodle Premierlangage
+   
+   
+   
+   sur lequel vous trouverez un lien vers pl.
+   
 
+   <img src="SCREENSHOTS/vue-cours.png">
+   <img src="SCREENSHOTS/tableaudebord-cours.png">
+   
    <h2> Exemple de chimie </h2>
 
       <img src="SCREENSHOTS/1-cinetique_pl.png">
