--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -95,7 +95,10 @@
    <img src="SCREENSHOTS/3-langageC-ackermann.png">
      <h2>Un exemple informatique : Java </h1>
    <img src="SCREENSHOTS/4-java-getters.png">
-  </div>
+
+ 
+ <img src="SCREENSHOTS/optic.png">
+ 
  
 </body>
 </html>
