--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -96,6 +96,7 @@
      <h2>Un exemple informatique : Java </h1>
    <img src="SCREENSHOTS/4-java-getters.png">
 
+    <h2>Un exemple d'Optique </h1>
  
  <img src="SCREENSHOTS/optic.png">
  
