Intégration de la vidéo Gource

--- a/code_source.html
+++ b/code_source.html
@@ -78,6 +78,8 @@
       plateforme <a href="https://github.com/PremierLangage">github</a>.
     </p>
 
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/yecgE1SkWBI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <p>
       Tout le monde peut contribuer aux sources de <b>Premier
       Langage</b>. C'est un projet qui ressemble à ses contributeurs
