On centre la vidéo intégrée !

--- a/code_source.html
+++ b/code_source.html
@@ -78,7 +78,9 @@
       plateforme <a href="https://github.com/PremierLangage">github</a>.
     </p>
 
+	<center>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/yecgE1SkWBI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</center>
 
     <p>
       Tout le monde peut contribuer aux sources de <b>Premier
