Mise à jour du site web avec la version 0.7.2

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>  
   <div class="menu">
 
-    <h1>Premier Langage 0.7.1</h1>
+    <h1>Premier Langage 0.7.2</h1>
     
     <b><i>Par des profs, pour des profs</b></i><br />
     <br />
@@ -68,7 +68,7 @@
   </div>
   <div class="main_body">
 
-    <h1>Bienvenu sur la plateforme Premier Langage</h1>
+    <h1>Bienvenue sur la plateforme Premier Langage</h1>
     
     <p>
       <b>Premier Langage</b> est une plateforme d'exercices
