--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <br />
     <a href="index.html" class="menu_a">Accueil</a>  |
     <a href="code_source.html" class="menu_a">Code Source</a> |
-    <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |
+    <!-- <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |-->
        <a href="anonymous.html" class="menu_a">Une feuille d'exercice pour Anonymes</a> |
     <a href="communaute.html" class="menu_a">Communauté</a> |
     <a href="documentation.html" class="menu_a">Documentation</a> |
