Petit nettoyage car D.R. est très salissant....

--- a/documentation.html
+++ b/documentation.html
@@ -55,14 +55,15 @@
 <body>  
   <div class="menu">
 
-    <h1>Premier Langage 0.7.2</h1>
+    <h3>Premier Langage 0.7.3</h3>
     
     <b><i>Par des profs, pour des profs</b></i><br />
     <br />
     <a href="index.html" class="menu_a">Accueil</a>  |
     <a href="code_source.html" class="menu_a">Code Source</a> |
     <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |
-    <a href="communaute.html" class="menu_a">Communauté</a>| 
+    <a href="anonymous.html" class="menu_a">Essayez en ligne!</a> |
+    <a href="communaute.html" class="menu_a">Communauté</a> | 
     <a href="documentation.html" class="menu_a">Documentation</a> |
     <a href="librairie.html" class="menu_a">Librairie scientifique</a>
   </div>
