--- a/anonymous.html
+++ b/anonymous.html
@@ -86,83 +86,86 @@
   <ul>
     <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/9104/" target="blank">
-	Irregular verbs (avec timer!)
+	Irregular verbs (aléatoire avec timer!)
       </a>
     </li>
   </ul>
 
-  <h2>Exercice de français</h2>
+  <h2>Exercices de français</h2>
   <ul>
     <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/9105/" target="blank">
-	Propositions subordonnées relatives (à actualiser plusieurs fois!)
+	Propositions subordonnées relatives (aléatoire)
       </a>
     </li>
   </ul>
-  
-  
-<a style="white-space: normal;" href="https://pl.u-pem.fr/filebrowser/demo/8846/">Commencer</a>
 
+  <h2>Exercices de grec</h2>
+  <ul>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8847/" target="blank">
+	Analyse verbale (aléatoire)
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8848/" target="blank">
+	Vocabulaire grec (aléatoire)
+      </a>
+    </li>
+  </ul>
+
+
+  <h2>Exercice de chimie</h2>
+  <ul>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8849/" target="blank">
+	Équilibrer une équation chimique
+      </a>
+    </li>
+  </ul>
+
+
+  <h2>Exercices de mathématiques</h2>
+  <ul>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8851/" target="blank">
+	Trouver le rang d'une matrice simple (aléatoire)
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8854/" target="blank">
+	Calcul mental (aléatoire temps limité)
+      </a>
+    </li>
+  </ul>
+
+
+  <h2>Exercices de géographie</h2>
+  <ul>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8846/" target="blank">
+	Capitales de pays (aléatoire)
+      </a>
+    </li>
+  </ul>
+
+  <h2>Exercices d'informatique</h2>
+  <ul>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8852/" target="blank">
+	Programmation C : Fonction d'Ackermann
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8853/" target="blank">
+	Programmation JAVA : Junit
+      </a>
+    </li>
+  </ul>  
+
+  
 <ul>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8846/" type="button"
-   class="btn btn-secondary btn-type state-failed btn-lg">
-    Capitales de pays
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8847/" type="button"
-   class="btn btn-secondary btn-type state-failed btn-lg">
-    Grec ancien : Analyse verbale
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8848/" type="button"
-   >
-    Vocabulaire grec
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8849/" type="button"
-   >
-    Chimie : équilibrer une équation chimique
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8850/" type="button"
-   >
-    Grammaire : reconnaître les propositions subordonnées relatives
-</a>
-
-</body>
-</html>   
-    
-        
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8851/" type="button"
-   >
-    Algèbre : trouver le rang d&#39;une matrice simple
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8852/" type="button"
-   >
-    Fonction d&#39;Ackermann
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8853/" type="button"
-   >
-    Junit
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8854/" type="button"
-   >
-    Calcul mental
-</a>
-</li><li>
+<li>
 <a style="white-space: normal;"
    href="https://pl.u-pem.fr/filebrowser/demo/8855/" type="button"
    class="btn btn-secondary btn-type state-succeded btn-lg">
