Fin du nettoyage....

--- a/anonymous.html
+++ b/anonymous.html
@@ -137,6 +137,16 @@
 	Calcul mental (aléatoire temps limité)
       </a>
     </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8856/" target="blank">
+	Produit de nombres complexes (aléatoire)
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8857/" target="blank">
+	Identifier graphiquement un ensemble (aléatoire)
+      </a>
+    </li>
   </ul>
 
 
@@ -161,96 +171,57 @@
 	Programmation JAVA : Junit
       </a>
     </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8859/" target="blank">
+	Programmation Python : découverte des conditionnelles
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8860/" target="blank">
+	Programmation Python : Programme et arguments 
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8861/" target="blank">
+	Programmation Python : Suite de Fibonacci
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8862/" target="blank">
+	Programmation Python : Narcissistic decimal number
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8863/" target="blank">
+	Programmation Python : Args and divisibility
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8864/" target="blank">
+	Programmation Python : Title String
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8865/" target="blank">
+	Programmation Python : Building a pyramid
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8866/" target="blank">
+	Programmation Python : Stack
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8867/" target="blank">
+	Programmation Python : Encryption of Enigma Machine
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/8868/" target="blank">
+	Programmation Python : Decryption of Enigma Machine
+      </a>
+    </li>
   </ul>  
-
-  
-<ul>
-<li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8855/" type="button"
-   class="btn btn-secondary btn-type state-succeded btn-lg">
-    section de mathématiques
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8856/" type="button"
-   >
-    Produit
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8857/" type="button"
-   class="btn btn-secondary btn-type state-succeded btn-lg">
-    Représentation des opérations sur un diagramme
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8858/" type="button"
-   class="btn btn-secondary btn-type state-succeded btn-lg">
-    Section d&#39;informatique
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8859/" type="button"
-   >
-    Condition
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8860/" type="button"
-   >
-    Args and strings
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8861/" type="button"
-   >
-    Fibonacci
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8862/" type="button"
-   >
-    Narcissistic decimal number
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8863/" type="button"
-   >
-    Args and divisibility
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8864/" type="button"
-   >
-    Title String
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8865/" type="button"
-   >
-    Building a pyramid
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8866/" type="button"
-   >
-    Stack
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8867/" type="button"
-   >
-    Encryption of Enigma Machine
-</a>
-</li><li>
-<a style="white-space: normal;"
-   href="https://pl.u-pem.fr/filebrowser/demo/8868/" type="button"
-   >
-    Decryption of Enigma Machine
-</a>
-</li>
-</ul>
 
 
   </div>
