--- a/anonymous.html
+++ b/anonymous.html
@@ -98,6 +98,11 @@
 	Propositions subordonnées relatives (aléatoire)
       </a>
     </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/9107/" target="blank">
+	Reconnaître les temps de conjugaison
+      </a>
+    </li>
   </ul>
 
   <h2>Exercices de grec</h2>
@@ -150,7 +155,7 @@
   </ul>
 
 
-  <h2>Exercices de géographie</h2>
+  <h2>Exercice de géographie</h2>
   <ul>
     <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/8846/" target="blank">
@@ -164,6 +169,11 @@
     <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/8852/" target="blank">
 	Programmation C : Fonction d'Ackermann
+      </a>
+    </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/9110/" target="blank">
+	Programmation C : Étapes durant la compilation en C
       </a>
     </li>
     <li>
