Ajout de l'exo sur deux règles d'orthographe

--- a/anonymous.html
+++ b/anonymous.html
@@ -103,6 +103,11 @@
 	Reconnaître les temps de conjugaison
       </a>
     </li>
+    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/9117/" target="blank">
+	Deux règles d'orthographe (aléatoire)
+      </a>
+    </li>
   </ul>
 
   <h2>Exercices de grec</h2>
