add a pltest exemple

--- a/anonymous.html
+++ b/anonymous.html
@@ -192,6 +192,11 @@
       </a>
     </li>
     <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/9120/" target="blank">
+        Programmation Python : Coefficient du binome (modèle pltest) 
+      </a>
+    </li>
+    <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/8860/" target="blank">
 	Programmation Python : Programme et arguments 
       </a>
