Calmez-vous avec les keywords!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
  <meta property="og:image" content="https://pl.u-pem.fr/static/favicon.ico"/>
  <meta property="og:site_name" content="Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs"/>
  <meta property="og:description" content="Premier Langage est une plateforme d'exercices en ligne multi-matières auto corrigés."/>
+ <meta name="keywords" content="pl, exercice, informatique, mathématique, français, qcm, enseignement, outil, lycée, collège, université, open, libre, ouvert, collaboration, cours, publication, partage, apprentissage, compétence, AAV" /> 
 
  <style type="text/css">
    .menu{
