--- a/anonymous.html
+++ b/anonymous.html
@@ -191,6 +191,11 @@
 	Programmation Python : découverte des conditionnelles
       </a>
     </li>
+	    <li>
+      <a href="https://pl.u-pem.fr/filebrowser/demo/10050/" target="blank">
+	Programmation Python : une fonction
+      </a>
+    </li> 
     <li>
       <a href="https://pl.u-pem.fr/filebrowser/demo/9120/" target="blank">
         Programmation Python : Coefficient du binome (modèle pltest) 
