--- a/tour_de_pl.html
+++ b/tour_de_pl.html
@@ -1,93 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
 <head>
- <title>Découverte de Premier Langage
- </title>
-
- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
- <link rel="shortcut icon" href="https://pl.u-pem.fr/static/favicon.ico" type="image/x-icon" />
-
- <meta property="og:title" content="Découverte de Premier Langage"/>
- <meta property="og:type" content="website"/>
- <meta property="og:url" content="https://premierlangage.github.io/PLPR/"/>
- <meta property="og:image" content="https://pl.u-pem.fr/static/favicon.ico"/>
- <meta property="og:site_name" content="Premier Langage - Exerciseur moderne multi-matières par des profs pour des profs"/>
- <meta property="og:description" content="Premier Langage est une plateforme d'exercices en ligne multi-matières auto corrigés."/>
-
- <style type="text/css">
-   .menu{
-   background-color: #282c34;
-   color: #ffffff;
-   margin: 0px;
-   padding: 5px;
-   }
-   .menu_a{
-   text-decoration: None;
-   color: #ffffff;
-   }
-   .menu_a:hover{
-   color: #aaaaaa;
-   text-decoration: None;
-   }
-   .main_body{
-   margin-left: 4%;
-   margin-right: 4%;
-   padding: 1%;
-   }
- </style>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149458831-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-149458831-1');
-</script>
- 
 </head>
-
-
-<body>  
-  <div class="menu">
-
-    <h3>Premier Langage 0.7.3</h3>
-    
-    <b><i>Par des profs, pour des profs</b></i><br />
-    <br />
-    <a href="index.html" class="menu_a">Accueil</a>  |
-    <a href="code_source.html" class="menu_a">Code Source</a> |
-    <a href="tour_de_pl.html" class="menu_a">Découverte de PL</a> |
-    <a href="anonymous.html" class="menu_a">Essayez en ligne!</a> |
-    <a href="communaute.html" class="menu_a">Communauté</a> |
-    <a href="documentation.html" class="menu_a">Documentation</a> |
-    <a href="librairie.html" class="menu_a">Librairie scientifique</a>
-  </div>
-  <div class="main_body">
-
-    <h1>Découverte rapide de Premier Langage</h1>
-   <h2> Un exemple de page d'exercices </h2>
-   
-   <h2> Exemple de chimie </h2>
-
-      <img src="SCREENSHOTS/1-cinetique_pl.png">
-     <h2>Un exemple de Maths</h1>
-    
-   <img src="SCREENSHOTS/2-rang_matrice.png">
- <p> Remarquez dans cet exemple que la matrice est tirée au hasard 
-     <h2>Un exemple informatique : C </h1>
-   <img src="SCREENSHOTS/3-langageC-ackermann.png">
-     <h2>Un exemple informatique : Java </h1>
-   <img src="SCREENSHOTS/4-java-getters.png">
-
-    <h2>Un exemple d'Optique </h1>
- 
- <img src="SCREENSHOTS/optic.png">
- 
- 
+<body> 
+ <a href="https://premierlangage.github.io/PLaTon/">We just moved here !</a>
 </body>
 </html>
