--- a/index_en.html
+++ b/index_en.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B12031SJZ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B12031SJZ2');
+</script>
         <meta charset="utf-8">
         <meta name="description" content="Premier Langage is a platform of exercises for multiple subjects (Mathematics, computer sciences, ...) with auto-correction. It is easy to use for both students and teachers." />
         <meta name="robots" content="index,follow">
